Fix use of visibility hidden in styled mode for legend.

--- a/css/highcharts.scss
+++ b/css/highcharts.scss
@@ -867,6 +867,9 @@ text.highcharts-drilldown-data-label,
     margin-top: -3px;
     opacity: 0.01;
 }
+.highcharts-a11y-invisible {
+    visibility: hidden;
+}
 .highcharts-a11y-proxy-container,
 .highcharts-a11y-proxy-container-before,
 .highcharts-a11y-proxy-container-after {
